--- a/index.html
+++ b/index.html
@@ -9,18 +9,39 @@
 
     <title>Flex-Box</title>
 </head>
-<body > 
+<body >
   <div class="main">
-     <div class="div div1">1</div>
-     <div class="div div2">2</div>
-     <div class="div div3">3</div>
-     <div class="div div4">4</div>
-     <div class="div div5">5</div>
-     <div class="div div6">6</div>
-     <div class="div div7">7</div>
+    <div class="row1">
+        <div class="div div1">
+              <div class="div div-1-1">1.1</div>
+              <div class="div div-1-2">1.2</div>
+        </div>
+        <div class="div div2">2</div>
+        <div class="div div3">3</div>
+        <div class="div div4">4</div> 
+    </div>
+    <div class= "row2">
+      <div class="div div5">
+        <div class="div div-5-1">5.1</div>
+        <div class="div div-5-2">5.2</div>
+        <div class="div div-5-3">5.3</div>
+      </div>
+      <div class="div div6">
+        <div class="div div-6-1">6.1</div>
+        <div class="div div-6-2">6.2</div>
+        <div class="div div-6-3">6.3</div>
+      </div> 
+    </div>
+    <div class="row3">
+      <div class="div div7">7</div>
      <div class="div div8">8</div>
-     <div class="div div9">9</div>
-     <div class="div div10">10</div>
+      <div class="div div9">9</div>
+      <div class="div div10">
+        <div class="div div-10-1">10.1</div>
+        <div class="div div-10-2">10.2</div>
+        <div class="div div-10-3">10.3</div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
